--- a/astro/package.json
+++ b/astro/package.json
@@ -10,8 +10,19 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.6.1",
     "@astrojs/check": "^0.5.10",
+    "@astrojs/node": "^8.2.5",
+    "@astrojs/react": "^3.3.0",
+    "@astrojs/tailwind": "^5.1.0",
+    "@builder.io/qwik": "^1.5.2",
+    "@qwikdev/astro": "^0.5.14",
+    "@types/react": "^18.2.78",
+    "@types/react-dom": "^18.2.25",
+    "astro": "^4.6.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "storyblok-js-client": "^6.7.2",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   }
 }
