--- a/next/tsconfig.json
+++ b/next/tsconfig.json
@@ -19,7 +19,7 @@
     "paths": {
       "@/*": [
         "./*"
-      ]
+      ],      
     },
     "plugins": [
       {
@@ -31,7 +31,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "../storybloks/*.tsx"
   ],
   "exclude": [
     "node_modules"
